--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "correttore",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "type": "module",
   "main": "./dist/index.js",
@@ -18,6 +18,7 @@
     }
   },
   "scripts": {
+    "build": "tsup",
     "check:types": "tsc --noEmit --pretty"
   },
   "keywords": [],
