--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@swc-node/register": "^1.6.6",
     "@swc/core": "^1.3.76",
+    "bun-types": "^1.0.3",
     "tsup": "^7.2.0",
     "typescript": "^5.1.6"
   }
