--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@swc-node/register": "^1.6.6",
     "@swc/core": "^1.3.76",
     "bun-types": "^1.0.3",
+    "hotscript": "^1.0.13",
     "tsup": "^7.2.0",
     "typescript": "^5.1.6"
   }
