--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
     "bun-types": "^1.0.3",
     "hotscript": "^1.0.13",
     "tsup": "^7.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "5.3.3"
   }
 }
