--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "scripts": {
     "build": "tsup",
+    "prettier:write": "prettier --write .",
+    "check:lint": "eslint .",
+    "check:format": "prettier --check .",
     "check:types": "tsc --noEmit --pretty"
   },
   "keywords": [],
@@ -29,11 +32,18 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "@swc-node/register": "^1.6.6",
     "@swc/core": "^1.3.76",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
     "bun-types": "^1.0.3",
+    "eslint": "8.57.0",
+    "globals": "^15.0.0",
     "hotscript": "^1.0.13",
+    "prettier": "^3.2.5",
     "tsup": "^7.2.0",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "typescript-eslint": "^7.6.0"
   }
 }
